Сделано все основное связанное с цветами ников